@@ -809,7 +809,7 @@ static int infile_enc[NOFILE]; /* ENC_UNKNOWN (=0): not determined
 
 /* guess file encoding */
 /*
-    asumption:
+    assumption:
       No halfwidth katakana in Shift_JIS
       No SS2 nor SS3 in EUC-JP
       JIS X 0208 only and no platform dependent characters in Shift_JIS, EUC-JP
@@ -826,7 +826,8 @@ char *ptenc_guess_enc(FILE *fp)
 #endif /* DEBUG */
     enc = xmalloc(sizeof(char)*18);
 
-    while ((k0 = fgetc(fp)) != EOF && maybe_sjis+maybe_euc+maybe_utf8>1) {
+    while ((k0 = fgetc(fp)) != EOF &&
+           (maybe_sjis+maybe_euc+maybe_utf8>1 || pos_db || pos_utf8)) {
         lbyte++;
         if (k0==ESC) {
             k0 = fgetc(fp);
@@ -858,15 +859,18 @@ char *ptenc_guess_enc(FILE *fp)
                 if (maybe_sjis) {
                     cdb[1] = k0;
                     k1 = JIStoUCS2(SJIStoJIS(HILO(cdb[0],cdb[1])));
-                    if (k1) {
 #ifdef DEBUG
+                    fprintf(stderr, "Character for guess encoding: 0x%02X%02X", cdb[0], cdb[1]);
+                    if (k1) {
                         i = UCStoUTF8S(k1, str0);
                         str0[i] = '\0';
-                        fprintf(stderr, "Character for guess encoding: 0x%02X%02X", cdb[0], cdb[1]);
                         fprintf(stderr, " sjis (%s)\n", str0);
-#endif /* DEBUG */
-                        continue;
+                    } else {
+                        fprintf(stderr, " not sjis\n");
                     }
+#endif /* DEBUG */
+                    if (k1)
+                        continue;
                 }
                 maybe_sjis = 0;
             }
@@ -897,8 +901,8 @@ char *ptenc_guess_enc(FILE *fp)
             }
             pos_db = 0;
 #ifdef DEBUG
+            fprintf(stderr, "Character for guess encoding: 0x%02X%02X", cdb[0], cdb[1]);
             if (maybe_sjis || maybe_euc) {
-                fprintf(stderr, "Character for guess encoding: 0x%02X%02X", cdb[0], cdb[1]);
                 if (maybe_sjis) {
                     i = UCStoUTF8S(k1, str0);
                     str0[i] = '\0';
@@ -910,6 +914,8 @@ char *ptenc_guess_enc(FILE *fp)
                     fprintf(stderr, " euc (%s)", str0);
                 }
                 fprintf(stderr, "\n");
+            } else {
+                fprintf(stderr, " not sjis nor euc\n");
             }
 #endif /* DEBUG */
         }
@@ -930,8 +936,7 @@ char *ptenc_guess_enc(FILE *fp)
                 continue;
             }
             cu8[pos_utf8] = k0;
-            pos_utf8++;
-            if (pos_utf8==len_utf8) {
+            if (pos_utf8==1) {
                 if ((cu8[0]==0xE0 && cu8[1]<0xA0) ||
                     (cu8[0]==0xED && cu8[1]>0x9F) ||
                     (cu8[0]==0xF0 && cu8[1]<0x90)) { /* illegal combination in UTF-8 */
@@ -939,6 +944,9 @@ char *ptenc_guess_enc(FILE *fp)
                     pos_utf8 = 0;
                     continue;
                 }
+            }
+            pos_utf8++;
+            if (pos_utf8==len_utf8) {
 #ifdef DEBUG
                 for (i=0; i<len_utf8; i++) str0[i] = cu8[i];
                 str0[i] = '\0';
@@ -953,6 +961,10 @@ char *ptenc_guess_enc(FILE *fp)
         }
     }
 
+    if (k0==EOF) {
+        if (pos_db)   maybe_sjis = maybe_euc = 0;
+        if (pos_utf8) maybe_utf8 = 0;
+    }
     if (is_ascii)
         strcpy(enc,"ASCII");
     else if (maybe_sjis+maybe_euc+maybe_utf8>1) {
